--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,10 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>8</maven.compiler.source>
+    <maven.compiler.target>8</maven.compiler.target>
   </properties>
-
+ 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
